cabal-version:       2.4
name:                boxes
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/chris/boxes#boxes) for more details.
homepage:            https://github.com/chris/boxes
bug-reports:         https://github.com/chris/boxes/issues
license:             MIT
license-file:        LICENSE
author:              Chris Upshaw (From Yukari)
maintainer:          Chris Upshaw (From Yukari) <chrisaupshaw@gmail.com>
copyright:           2022 Chris Upshaw (From Yukari)
category:            Development
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/chris/boxes.git

common common-options
  build-depends:       base ^>= 4.14.3.0
                     , Relude

  mixins:              base hiding (Prelude)
                     , Relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Boxes

executable boxes
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       boxes
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite boxes-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       boxes
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark boxes-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       boxes
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
